Perform minor tests and cleanup of stylesheets, etc.

--- a/stylesheets/tactile_print.css
+++ b/stylesheets/tactile_print.css
@@ -1,3 +1,8 @@
+/*! https://github.com/jasonlong/tactile-theme/tree/master/stylesheets/print.css 
+    CC BY 4.0 License (http://creativecommons.org/licenses/by/4.0/) 
+    No changes made other than the addition of this comment.
+*/
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
