--- a/stylesheets/tactile_screen.css
+++ b/stylesheets/tactile_screen.css
@@ -1,3 +1,8 @@
+/*! https://github.com/jasonlong/tactile-theme/tree/master/stylesheets/stylesheet.css 
+    CC BY 4.0 License (http://creativecommons.org/licenses/by/4.0/) 
+    No changes made other than the addition of this comment.
+*/
+
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
