--- a/views/search.html
+++ b/views/search.html
@@ -1,10 +1,3 @@
-<div class="photo">
-  <div class="container">
-    <img ng-src="{{ detail.url }}">
-    <h2 class="photo-title">{{ detail.title }} </h2>
-    <p class="photo-author">{{ detail.author }} </p>
-    <p class="photo-views">{{ detail.views | number }} </p>
-    <p class="photo-upvotes">{{ detail.upvotes | number }} </p>
-    <p class="photo-pubdate">{{ detail.pubdate | date }} </p>
-  </div>
-</div>
+<h1>{{ controllerData.headerKey }}</h1>
+<div><a ng-click="search('test search term')">search</a></div>
+<div><a ng-click="random()">random</a></div>
