Test if moded path to include solves problem of ng-include on remote

--- a/views/result_list.html
+++ b/views/result_list.html
@@ -1,4 +1,4 @@
-<ng-include src="'../includes/new_search.html'"></ng-include>
+<ng-include src="'views/include_new_search.html'"></ng-include>
 <h1>{{ controllerData.headerKey }}</h1>
 <div ng-repeat="musician in musicians">
 	<a href="#/musician/{{ musician.id }}">
