--- a/views/musician.html
+++ b/views/musician.html
@@ -1,4 +1,4 @@
-<ng-include src="'../includes/new_search.html'"></ng-include>
+<ng-include src="'views/include_new_search.html'"></ng-include>
 <h1>{{ controllerData.headerKey }}</h1>
 <div>
 	<span>{{ musician.id }}</span>
