Mod ResultListController.js to use dummy service for test purposes

--- a/views/result_list.html
+++ b/views/result_list.html
@@ -5,5 +5,6 @@
 		<span>{{ musician.id }}</span>
 		<span>{{ musician.resource }}</span>
 		<span>{{ musician.label }}</span>
+			{{ musician.from }}
 	</a>
 </div>
