Push to test dbpedia service on remote

--- a/views/result_list.html
+++ b/views/result_list.html
@@ -5,6 +5,7 @@
 		<span>{{ musician.id }}</span>
 		<span>{{ musician.resource }}</span>
 		<span>{{ musician.label }}</span>
-			{{ musician.from }}
+		{{ musician.from }}
+			{{ musician.results }}
 	</a>
 </div>
