--- a/views/musician.html
+++ b/views/musician.html
@@ -1,7 +1,9 @@
 <ng-include src="'views/include_new_search.html'"></ng-include>
 <h1>{{ controllerData.headerKey }}</h1>
 <div>
-	<span>{{ musician.id }}</span>
-	<span>{{ musician.resource }}</span>
-	<span>{{ musician.label }}</span>
+	<span>{{ dbpResults[0].resource_label.value }}</span>
+	<span>{{ dbpResults[0].thumbnail.value }}</span>
+	<span>{{ dbpResults[0].comment.value }}</span>
+	<span>{{ dbpResults[0].genre_resource.value }}</span>
+	<span>{{ dbpResults[0].genre_label.value }}</span>
 </div>
