--- a/views/search.html
+++ b/views/search.html
@@ -1,3 +1,3 @@
 <h1>{{ controllerData.headerKey }}</h1>
-<div><a ng-click="search('blur')">search</a></div>
+<div><a ng-click="search('paradis')">search</a></div>
 <div><a ng-click="random('id','')">random</a></div>
