--- a/views/search.html
+++ b/views/search.html
@@ -1,3 +1,8 @@
 <h1>{{ controllerData.headerKey }}</h1>
-<div><a ng-click="search('paradis')">search</a></div>
+<div>
+	<input type="text"
+		 ng-model="searchKeywords"
+		 ng-keyup="$event.keyCode == 13 && search(searchKeywords)"
+		 placeholder="Search for musician or band"/>
+</div>
 <div><a ng-click="random('id','')">random</a></div>
