Add search input validation

--- a/views/search.html
+++ b/views/search.html
@@ -1,8 +1,18 @@
 <h1>{{ controllerData.headerKey }}</h1>
+
+<form name="searchForm" novalidate>
 <div>
 	<input type="text"
-		 ng-model="searchKeywords"
-		 ng-keyup="$event.keyCode == 13 && search(searchKeywords)"
-		 placeholder="Search for musician or band"/>
+		name="searchKeywords"
+		ng-model="searchKeywords"
+		required
+		placeholder="Search for musician or band"
+		ng-pattern="/^[a-zA-Z0-9\s]*$/"
+		ng-keyup="$event.keyCode == 13 && searchForm.searchKeywords.$valid && search(searchKeywords)"/>
+	<span ng-show="searchForm.searchKeywords.$dirty && (searchForm.searchKeywords.$error.required || searchForm.searchKeywords.$invalid)">Enter musician or band name.  Letters, numbers and spaces allowed.</span>
 </div>
+</form>
+
 <div><a ng-click="random('id','')">random</a></div>
+
+
