--- a/views/result_list.html
+++ b/views/result_list.html
@@ -1,7 +1,6 @@
 <ng-include src="'views/include_new_search.html'"></ng-include>
 <h1>{{ controllerData.headerKey }}</h1>
-<div ng-show="!dbpResults.length && dbpResults.length != 0">Waiting for results...</div>
-<div ng-show="dbpResults.length === 0">No results found</div>
+<md-results-placeholder mdresplaceholder="dbpResults"></md-results-placeholder>
 <div ng-repeat="result in dbpResults">
 	<a href="#/musician/{{ result.id.value }}">
 		<span>{{ result.label.value }}</span>
