Add styling to search page and misc cleanup

--- a/views/search.html
+++ b/views/search.html
@@ -18,11 +18,11 @@
 	</form>
 	<div class="text-center">
 		<div class="btn-group">
-			<a ng-click="searchForm.searchKeywords.$valid && search(searchKeywords)" id="search-button" class="btn btn-default btn-sm">
-				<span><i class="fa fa-search fa-fw"></i> search</span>
+			<a ng-click="searchForm.searchKeywords.$valid && search(searchKeywords)" class="btn btn-default">
+				<span><i class="fa fa-search fa-lg"></i> search</span>
 			</a>
-			<a ng-click="random('id','')" id="random-button" class="btn btn-default btn-sm">
-				<span><i class="fa fa-gift fa-fw"></i> surprise me</span>
+			<a ng-click="random('id','')" class="btn btn-default">
+				<span><i class="fa fa-gift fa-lg"></i> surprise me</span>
 			</a>
 		</div>
 	</div>
