--- a/css/app.css
+++ b/css/app.css
@@ -3,11 +3,15 @@
  * (Override tactile_screen.css)
  */
 h1 {
-  font-size: 30px;
+	font-size: 30px;
 }
 
 hr {
-  padding-bottom: .5em;
+	padding-bottom: .5em;
+}
+
+a.button {
+	padding: 8px 8px 8px 8px;
 }
 
 form {
@@ -37,6 +41,10 @@ input:focus {
 	color: #e7e7e7;
 }
 
+#downloads {
+	margin-bottom: 25px;
+}
+
 #view-on-github {
 	margin-right: 14px;
 }
@@ -58,12 +66,20 @@ input:focus {
 	}
 
 	header h2 {
-		font-size: 20px;
-		line-height: 1.3;
+		font-size: 19px;
+		line-height: 1;
 	}
 
 	footer {
 		font-size: 11px;
+	}
+
+	hr {
+		padding-bottom: 1px;
+	}
+
+	#downloads {
+		margin-bottom: 20px;
 	}
 
 	#view-on-github {
