--- a/css/app.css
+++ b/css/app.css
@@ -20,6 +20,11 @@ a.button span {
 	padding-left: 55px;
 }
 
+ul li {
+  list-style: none;
+  padding-left: 0px;
+}
+
 form {
 	padding: 0px;
 	background: none;
@@ -61,9 +66,8 @@ input:focus {
 	margin-top: 0px;
 	margin-bottom: 15px;
 	color: #d5000d;
-	font-size: 14px;
+	font-size: 13px;
 	font-style: italic;
-	text-align: center;
 }
 
 #downloads {
