Add styling for "new search" button

--- a/views/include_new_search.html
+++ b/views/include_new_search.html
@@ -1,1 +1,7 @@
-<a href="#/">new search</a>
+<div class="text-left">
+	<div class="btn-group">
+		<a class="btn btn-default button search" id="newSearchButton" href="#/">
+			<span><i class="fa fa-search fa-lg"></i><i class="fa fa-reply fa-lg"></i> new search</span>
+		</a>
+	</div>
+</div>
