Mod thumb-img background and alt text style
Though mdImg directive takes alt text, and thumb-img will display it, not using currently. Not pleased with look so just using blank black background when no img.  This works whether no thumbnail specified by dbpedia (ex: Haven Gillespie) or if wikimedia image redirect broken (ex: Fortuna la Super F).  This because the mdFallbackSrc changed to remove the img src attribute as fallback, not the image element itself.

--- a/css/app.css
+++ b/css/app.css
@@ -95,6 +95,11 @@ input:focus {
 	height: 200px;
 	width: 225px;
 	border: 2px inset #e7e7e7;
+	background-color: black;
+	font-family: 'Chivo', 'Helvetica Neue', Helvetica, Arial, serif;
+	font-size: 20px;
+	font-weight: normal;
+	color: white;
 }
 
 #downloads {
