--- a/views/result_list.html
+++ b/views/result_list.html
@@ -11,13 +11,13 @@
 					<div class="col-md-6" ng-show="dbpResults[$index+0]">
 						<a href="#/musician/{{ dbpResults[$index+0].id.value }}" class="button thumb-btn">
 							<span>{{ dbpResults[$index+0].label.value }}</span> 
-							<md-img mdimgclass="'thumb-img'" mdimgval="dbpResults[$index+0].thumbnail.value" mdimgalt="dbpResults[$index+0].label.value"></md-img>
+							<md-img mdimgclass="'thumb-img'" mdimgval="dbpResults[$index+0].thumbnail.value" mdimgalt=""></md-img>
 						</a>
 					</div>
 					<div class="col-md-6" ng-show="dbpResults[$index+1]">
 						<a href="#/musician/{{ dbpResults[$index+1].id.value }}" class="button thumb-btn">
 							<span>{{ dbpResults[$index+1].label.value }}</span> 
-							<md-img mdimgclass="'thumb-img'" mdimgval="dbpResults[$index+1].thumbnail.value" mdimgalt="dbpResults[$index+1].label.value"></md-img>
+							<md-img mdimgclass="'thumb-img'" mdimgval="dbpResults[$index+1].thumbnail.value" mdimgalt=""></md-img>
 						</a>
 					</div>
 				</div>
