--- a/views/result_list.html
+++ b/views/result_list.html
@@ -9,16 +9,10 @@
 			<span ng-switch-when="0">
 				<div class="row">
 					<div class="col-md-6" ng-show="dbpResults[$index+0]">
-						<a href="#/musician/{{ dbpResults[$index+0].id.value }}" class="button thumb-btn">
-							<span>{{ dbpResults[$index+0].label.value }}</span> 
-							<md-img mdimgclass="'thumb-img'" mdimgval="dbpResults[$index+0].thumbnail.value" mdimgalt=""></md-img>
-						</a>
+						<md-thumb-img mdthumbobj="dbpResults[$index+0]"></md-thumb-img>
 					</div>
 					<div class="col-md-6" ng-show="dbpResults[$index+1]">
-						<a href="#/musician/{{ dbpResults[$index+1].id.value }}" class="button thumb-btn">
-							<span>{{ dbpResults[$index+1].label.value }}</span> 
-							<md-img mdimgclass="'thumb-img'" mdimgval="dbpResults[$index+1].thumbnail.value" mdimgalt=""></md-img>
-						</a>
+						<md-thumb-img mdthumbobj="dbpResults[$index+1]"></md-thumb-img>
 					</div>
 				</div>
 			</span>
