--- a/views/musician.html
+++ b/views/musician.html
@@ -1,22 +1,34 @@
 <ng-include src="'views/include_new_search.html'"></ng-include>
-<h1>{{ dbpResultsMusician[0].resource_label.value.length > 0 ? dbpResultsMusician[0].resource_label.value : 'musician details'}}
-</h1>
+<h1>{{ dbpResultsMusician[0].resource_label.value.length > 0 ? dbpResultsMusician[0].resource_label.value : 'musician details'}}</h1>
 <md-results-placeholder mdresplaceholder="dbpResultsMusician"></md-results-placeholder>
-<div>
-	<md-img mdimgval="dbpResultsMusician[0].thumbnail.value"></md-img>
-	<span>{{ dbpResultsMusician[0].resource_label.value }}</span>
-	<span>{{ dbpResultsMusician[0].comment.value }}</span>
-</div>
-<div ng-repeat="musician in dbpResultsMusician">
-	<a ng-controller="SearchController" ng-click="random('genre', musician.genre_resource.value)">
-		<span>{{ musician.genre_label.value }}</span>
-	</a>
-</div>
-<h2>associated musicians</h2>
-<div ng-repeat="associate in dbpResultsAssociates | filter:isNotFeaturedMusician">
-	<a href="#/musician/{{ associate.id.value }}">
-		<md-img mdimgval="associate.thumbnail.value"></md-img>
-		<span>{{ associate.id.value}}</span>
-		<span>{{ associate.label.value}}</span>
-	</a>
-<div>
+
+<section id="musician">
+	<div class="row">
+		<div class="col-md-6">
+			<div>
+				<md-featured-img mdfeaturedobj="dbpResultsMusician[0]"></md-featured-img>
+			</div>
+		</div>
+		<!-- Clearfix so comment text doesn't wrap awkwardly in xs small viewports e.g. iphone 6-->
+		<div class="clearfix visible-xs"></div>
+		<div class="col-md-6">
+			<div>
+				<p>{{ dbpResultsMusician[0].comment.value }}</p>
+				<a ng-repeat="musician in dbpResultsMusician" class="btn btn-default button search" ng-controller="SearchController" ng-click="random('genre', musician.genre_resource.value)">
+					<span>{{ musician.genre_label.value }}</span>
+				</a>
+			</div>
+		</div>
+	</div>
+</section>
+
+<section id="musicianAssociates">
+	<div class="row">
+		<div class="col-md-12">
+			<h2>associated musicians</h2>
+			<div ng-repeat="associate in dbpResultsAssociates | filter:isNotFeaturedMusician">
+				<md-thumb-img mdthumbobj="associate"></md-thumb-img>
+			<div>
+		</div>
+	</div>
+</section>
