--- a/css/app.css
+++ b/css/app.css
@@ -100,6 +100,12 @@ footer a:active {
 	font-size: 14px;
 }
 
+.btn.btn-default.button.search.sm {
+	margin-right: 1px;
+	margin-bottom: 1px;
+	font-size: 12px;
+}
+
 .input-search {
 	width: 100%;
 	margin-bottom: 15px;
@@ -161,6 +167,14 @@ footer a:active {
 
 #download-tar-gz {
 	margin-right: 0;
+}
+
+.tooltip.top .tooltip-inner {
+	background-color: #c5000c;
+}
+
+.tooltip.top .tooltip-arrow {
+	border-top-color: #c5000c;
 }
 
 /* #Media Queries
