--- a/app/views/musician.html
+++ b/app/views/musician.html
@@ -14,9 +14,11 @@
 		<div class="col-md-6">
 			<div>
 				<p>{{ dbpResultsMusician[0].comment.value }}</p>
-				<a ng-repeat="musician in dbpResultsMusician" class="btn btn-default button search sm" ng-controller="SearchController" data-toggle="tooltip" data-placement="auto" title="Show me another {{ musician.genre_label.value }} musician" ng-click="random('genre', musician.genre_resource.value)" md-tooltip>
-					<span>{{ musician.genre_label.value }}</span>
-				</a>
+				<div ng-repeat="musician in dbpResultsMusician">
+					<a class="btn btn-default button search sm" ng-controller="SearchController" ng-show="musician.genre_label.value.length > 0" data-toggle="tooltip" data-placement="auto" title="Show me another {{ musician.genre_label.value }} musician" ng-click="random('genre', musician.genre_resource.value)" md-tooltip>
+						<span>{{ musician.genre_label.value }}</span>
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
