Mod styling for associated musicians heading

--- a/app/views/musician.html
+++ b/app/views/musician.html
@@ -24,7 +24,7 @@
 	</div>
 </section>
 
-<section id="musicianAssociates">
+<section id="musician-associates">
 	<div class="row">
 		<div class="col-md-12">
 			<h2>associated musicians</h2>
