--- a/app/views/result_list.html
+++ b/app/views/result_list.html
@@ -2,7 +2,7 @@
 <h1>possible matches</h1>
 <md-results-placeholder mdresplaceholder="dbpResults"></md-results-placeholder>
 
-<section id="searchResults">
+<section id="search-results">
 	<div ng-repeat="result in dbpResults">
 		<span ng-switch on="$index % 2">
 			<span ng-switch-when="0">
