--- a/app/views/musician.html
+++ b/app/views/musician.html
@@ -24,27 +24,17 @@
 	</div>
 </section>
 
-<section id="musician-associates">
+<section id="musician-associates" ng-if="dbpResultsAssociates.length > 0">
 	<div class="row">
 		<div class="col-md-12">
 			<h2>associated musicians</h2>
 				<carousel>
-					<slide ng-repeat="associate in dbpResultsAssociates | filter:isNotFeaturedMusician" active="associate.active">
+					<slide ng-repeat="associate in dbpResultsAssociates" active="associate.active">
 						<md-thumb-img mdthumbobj="dbpResultsAssociates[$index+0]"></md-thumb-img>
-						<md-thumb-img mdthumbobj="dbpResultsAssociates[$index+1]"></md-thumb-img>
+						<md-thumb-img mdthumbobj="dbpResultsAssociates[$index+1]" ng-if="dbpResultsAssociates[$index+1]"></md-thumb-img>
 					</slide>
 				</carousel>
 		</div>
 	</div>
 </section>
 
-<section id="musician-associates">
-	<div class="row">
-		<div class="col-md-12">
-			<h2>associated musicians</h2>
-			<div ng-repeat="associate in dbpResultsAssociates | filter:isNotFeaturedMusician">
-				<md-thumb-img mdthumbobj="associate"></md-thumb-img>
-			<div>
-		</div>
-	</div>
-</section>
