Fix problem with fast clicks on carousel cause it to look "selected"

--- a/app/views/musician.html
+++ b/app/views/musician.html
@@ -24,7 +24,7 @@
 	</div>
 </section>
 
-<section id="musician-associates" ng-if="dbpResultsAssociates.length > 0">
+<section class="no-select" id="musician-associates" ng-if="dbpResultsAssociates.length > 0">
 	<div class="row">
 		<div class="col-md-12">
 			<h2>associated musicians</h2>
