--- a/app/views/musician.html
+++ b/app/views/musician.html
@@ -28,13 +28,15 @@
 	<div class="row">
 		<div class="col-md-12">
 			<h2>associated musicians</h2>
-				<carousel>
-					<slide ng-repeat="associate in dbpResultsAssociates" active="associate.active">
-						<md-thumb-img mdthumbobj="dbpResultsAssociates[$index+0]"></md-thumb-img>
-						<md-thumb-img mdthumbobj="dbpResultsAssociates[$index+1]" ng-if="dbpResultsAssociates[$index+1]"></md-thumb-img>
-					</slide>
-				</carousel>
+			<carousel>
+				<slide ng-repeat="associate in dbpResultsAssociates" active="dbpResultsAssociates[$index].active">
+					<md-thumb-img mdthumbobj="dbpResultsAssociates[$index+0]"></md-thumb-img>
+					<md-thumb-img mdthumbobj="dbpResultsAssociates[$index+1]" ng-if="dbpResultsAssociates[$index+1]"></md-thumb-img>
+				</slide>
+			</carousel>
 		</div>
 	</div>
 </section>
+
+
 
